Fix carousel on mobile

--- a/film-finder/src/css/home-page-css.css
+++ b/film-finder/src/css/home-page-css.css
@@ -15,9 +15,8 @@ body {
 }
 
 .carousel .slide {
-    background-color: #efefef!important;
     /* background-color: darkblue; */
-    max-height: 650px;
+    background-color: #282c34 !important;
 }
 
 .card {
