--- a/film-finder/src/css/movie-card-css.css
+++ b/film-finder/src/css/movie-card-css.css
@@ -41,7 +41,6 @@ w3-card-4 {
 
 .carousel-row {
     background-color: #282c34;
-    height:100%;
 }
 
 .movie {
